added some framework to javascript page

--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -21,9 +21,25 @@
         <h1>Coding Quiz Challenge</h1>
     </header>
         <p>Try to answer the following code-related questions within the time limit!</p>
+        <button>Start</button>   
+    </section>
+
+    <section class="start">
+        <header class="container">
+            <h2>Coding Quiz Challenge</h2>
+        </header>
+            <p>Try to answer the following code-related questions within the time limit!</p>
+        <button>Start</button>     
+    </section>
+
+    <section class="start">
+        <header class="container">
+            <h2>Coding Quiz Challenge</h2>
+        </header>
+            <p>Try to answer the following code-related questions within the time limit!</p>
         <button>Start</button>
-            
-        </section>
+                            
+    </section>
     </main>
 </body>
 </html>
