--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz Challenge</title>
     
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/pico.min.css">
     <style>
         .start {
             display: flex;
