added information and headers to the containers outlined in html

--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -16,30 +16,30 @@
 </head>
 <body>
     <main class="container">
-    <section class="start">
-    <header class="container">
-        <h1>Coding Quiz Challenge</h1>
-    </header>
+      <section class="start">
+        <header class="container">
+          <h1>Coding Quiz Challenge</h1>
+        </header>
         <p>Try to answer the following code-related questions within the time limit!</p>
         <button>Start</button>   
-    </section>
+      </section>
 
-    <section class="start">
+      <section class="quiz">
         <header class="container">
-            <h2>Coding Quiz Challenge</h2>
+            <h2>Quiz</h2>
         </header>
-            <p>Try to answer the following code-related questions within the time limit!</p>
-        <button>Start</button>     
-    </section>
+            <p>What is a function in JavaScript?</p>
+        <button>1. A fun party</button>   
+        <button>2. A block of code that executes a task when called upon.</button>  
+        <button>3. A true or false variable.</button>
+        <button>4. Values made up of letters, numbers, or symbols.</button>
+      </section>
 
-    <section class="start">
+      <section class="end">
         <header class="container">
-            <h2>Coding Quiz Challenge</h2>
-        </header>
-            <p>Try to answer the following code-related questions within the time limit!</p>
-        <button>Start</button>
-                            
-    </section>
+            <h2>End</h2>
+        </header>                      
+      </section>
     </main>
 </body>
 </html>
