created 5 quiz questions and their sections

--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -28,11 +28,66 @@
         <header class="container">
             <h2>Quiz</h2>
         </header>
+        <header>
+            <h3>Question 1.</h3>
+        </header>
             <p>What is a function in JavaScript?</p>
         <button>1. A fun party</button>   
         <button>2. A block of code that executes a task when called upon.</button>  
         <button>3. A true or false variable.</button>
         <button>4. Values made up of letters, numbers, or symbols.</button>
+      </section>
+
+      <section class="quiz">
+        <header class="container">
+            <h2>Quiz</h2>
+        </header>
+        <header>
+            <h3>Question 2.</h3>
+        </header>
+            <p>A Boolean is a true or false variable.</p>
+        <button>1. True.</button>   
+        <button>2. False.</button>  
+      </section>
+
+      <section class="quiz">
+        <header class="container">
+            <h2>Quiz</h2>
+        </header>
+        <header>
+            <h3>Question 3.</h3>
+        </header>
+            <p>What is an event listener?</p>
+        <button>1. Someone who eavesdrops on parties.</button>   
+        <button>2. A function in JavaScript that waits for an event (such as a click) and reacts to it.</button>  
+        <button>3. A function in HTML that waits for an event (such as a click) and reacts to it.</button>
+        <button>4. A base class within which all objects inherit specific properties.</button>
+      </section>
+
+      <section class="quiz">
+        <header class="container">
+            <h2>Quiz</h2>
+        </header>
+        <header>
+            <h3>Question 4.</h3>
+        </header>
+            <p>An array is a variable that houses different data types.</p>
+        <button>1. True.</button>   
+        <button>2. False.</button>  
+      </section>
+
+      <section class="quiz">
+        <header class="container">
+            <h2>Quiz</h2>
+        </header>
+        <header>
+            <h3>Question 5.</h3>
+        </header>
+            <p>In JavaScript, what does this '//' mean?</p>
+        <button>1. Or.</button>   
+        <button>2. And.</button>  
+        <button>3. Used at the beginning of a comment.</button>
+        <button>4. Used at the end of a comment. </button>
       </section>
 
       <section class="end">
