--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -58,10 +58,10 @@
             <h3>Question 3.</h3>
         </header>
             <p>What is an event listener?</p>
-        <button>1. Someone who eavesdrops on parties.</button>   
-        <button>2. A function in JavaScript that waits for an event (such as a click) and reacts to it.</button>  
-        <button>3. A function in HTML that waits for an event (such as a click) and reacts to it.</button>
-        <button>4. A base class within which all objects inherit specific properties.</button>
+        <button id="btn0">1. Someone who eavesdrops on parties.</button>   
+        <button id="btn1">2. A function in JavaScript that waits for an event (such as a click) and reacts to it.</button>  
+        <button id="btn2">3. A function in HTML that waits for an event (such as a click) and reacts to it.</button>
+        <button id="btn3">4. A base class within which all objects inherit specific properties.</button>
       </section>
 
       <section class="quiz">
@@ -93,7 +93,17 @@
       <section class="end">
         <header class="container">
             <h2>End</h2>
-        </header>                      
+        </header>
+            <p>Quiz FInished!</p>
+            <p>Score:</p>
+            <p class="score"></pclass></p>
+            <p>Enter your initials to save high score!</p>
+            <form method="POST">
+                <div class="initialInput">
+                    <label for="initials">Initials</label>
+                    <input type = "text" name="initials" id="initials" placeholder="ABC"/>
+                </div>
+            </form>                    
       </section>
     </main>
     <script src="./script.js"></script>
