added if else statement for entrering initials and high score, and saving them

--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -100,7 +100,7 @@
             <p>Enter your initials to save high score!</p>
             <form method="POST">
                 <div class="initialInput">
-                    <label for="initials">Initials</label>
+                    <label for="initials">Initials:</label>
                     <input type = "text" name="initials" id="initials" placeholder="ABC"/>
                 </div>
             </form>                    
