--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -15,16 +15,15 @@
     </style>
 </head>
 <body>
-     <!-- start Quiz button -->
-     <div class="start_btn"><button>Start Quiz</button></div>
- 
      <!-- Quiz Box -->
      <div class="quiz_box">
          <header>
-             <div class="title">Coding Quiz Challenge</div>
+             <h1>Coding Quiz Challenge</h1>
+             <!-- start Quiz button -->
+             <div class="start_btn"><button>Start Quiz</button></div>
              <div class="timer">
                  <div class="time_left_txt">Time Left</div>
-                 <div class="timer_sec">15</div>
+                 <div class="timer_sec">90</div>
              </div>
              <div class="time_line"></div>
          </header>
@@ -48,17 +47,10 @@
  
      <!-- Result Box -->
      <div class="result_box">
-         <div class="complete_text">Finished!</div>
-         <div class="score_text">
-           
-         </div>
-         <div class="buttons">
-             <button class="restart">Replay Quiz</button>
-             <button class="quit">Quit Quiz</button>
-         </div>
+         <div class="complete_text">Finish!</div>
+         <div class="score_text">Score:</div>
      </div>
  
      <script src="./assets/script.js"></script>
  </body>
- </html>
  </html>
