finally solved the issue of my screens not changing with buttons, changed startBTN to ID instead of class, required # rather than .

--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -21,18 +21,19 @@
                 <h1>Coding Quiz Challenge</h1>
             </header>
             <p>Try to answer all questions within the time limit!</p>
-            <button>Start</button>
+            <button id = "startBtn">Start</button>
         </section>
 
         <section class = "quiz">
             <header>
                 <h2 class = "questionNumber"></h2>
+            </header>
                 <p class = "questionText"></p>
                 <button id = "btn0"></button>
                 <button id = "btn1"></button>
                 <button id = "btn2"></button>
                 <button id = "btn3"></button>
-            </header>
+                <button id = "nextQ"></button>
         </section>
 
         <section class = "end">
