--- a/Test.Your.Coding.Knowledge.html
+++ b/Test.Your.Coding.Knowledge.html
@@ -28,12 +28,13 @@
             <header>
                 <h2 class = "questionNumber"></h2>
             </header>
-                <p class = "questionText"></p>
-                <button id = "btn0"></button>
-                <button id = "btn1"></button>
-                <button id = "btn2"></button>
-                <button id = "btn3"></button>
-                <button id = "nextQ"></button>
+            <div class = "questionCard">
+              <p></p>
+              <button></button>
+              <button></button>
+              <button></button>
+              <button></button>
+            </div>
         </section>
 
         <section class = "end">
